Working on creating 16x16 grid of square divs

--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     <script src="sketch.js" defer></script>
 </head>
 <body>
-    
+    <!-- 16x16 grid of square divs -->
+    <div class="container" id="grid">
+        <!-- <div class="grid"></div>
+        <div class="grid"></div>
+        <div class="grid"></div>
+        <div class="grid"></div>
+        <div class="grid"></div>
+        <div class="grid"></div>
+        <div class="grid"></div>
+        <div class="grid"></div>
+        <div class="grid"></div>
+        <div class="grid"></div>
+        <div class="grid"></div>
+        <div class="grid"></div>
+        <div class="grid"></div>
+        <div class="grid"></div>
+        <div class="grid"></div>
+        <div class="grid"></div> -->
+    </div>
 </body>
 </html>
