--- a/index.html
+++ b/index.html
@@ -9,24 +9,10 @@
     <script src="sketch.js" defer></script>
 </head>
 <body>
+    <h1>Etch-a-Sketch</h1>
+    <h3>Hover your cursor over the box below to start drawing!</h3>
     <!-- 16x16 grid of square divs -->
-    <div class="container" id="grid">
-        <!-- <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div> -->
+    <div class="container">
     </div>
 </body>
 </html>
