reset button added (reloads page)

--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
 <body>
     <h1>Etch-a-Sketch</h1>
     <h3>Hover your cursor over the box below to start drawing!</h3>
-    <!-- 16x16 grid of square divs -->
-    <div class="container">
 
+    <div class="same-line">
+        <!-- This box will contain size and color change features -->
+        <div class="side-box">
+            <button class="btn">Reset</button>
+        </div>
+
+        <!-- 16x16 grid of square divs -->
+        <div class="container"></div>
     </div>
 </body>
 </html>
