--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <div class="same-line">
         <!-- This box will contain size and color change features -->
         <div class="side-box">
+
+            <!-- Slider for grid size -->
+            <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+
             <button class="btn">Reset</button>
         </div>
 
