reset button moved to center and bottom and the size slider is now the correct size

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         </div>
 
         <!-- 16x16 grid of square divs -->
-        <div class="container"></div>
+        <form id="container=id">
+            <div class="container" id="container-id"></div>
+        </form>
     </div>
 </body>
 </html>
