--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
       <!-- This box will contain size and color change features -->
       <div class="side-box">
         <!-- Slider for grid size -->
+        <div id="sizeVal" class="size-value">16 x 16</div>
         <input
           type="range"
           min="1"
-          max="100"
-          value="50"
+          max="30"
+          value="16"
           class="slider"
-          id="myRange"
+          id="sizeSlider"
         />
 
         <button class="btn">Reset</button>
       </div>
 
       <!-- 16x16 grid of square divs -->
-      <form id="container=id">
-        <div class="container"></div>
-      </form>
+
+      <div class="container"></div>
     </div>
   </body>
 </html>
