16x16 grid successfully created in js and visual using css grid

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <!-- 16x16 grid of square divs -->
 
-      <div class="container"></div>
+      <div class="container" id="container"></div>
     </div>
   </body>
 </html>
