--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           id="sizeSlider"
         />
 
-        <button class="btn">Reset</button>
+        <button class="btn" id="btn">Reset</button>
       </div>
 
       <!-- 16x16 grid of square divs -->
