--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
       <!-- This box will contain size and color change features -->
       <div class="side-box">
         <!-- Slider for grid size -->
-        <div id="sizeVal" class="size-value">16 x 16</div>
-        <input
-          type="range"
-          min="1"
-          max="30"
-          value="16"
-          class="slider"
-          id="sizeSlider"
-        />
+        <div>
+          <div id="sizeVal" class="size-value"></div>
+          <input
+            type="range"
+            min="1"
+            max="100"
+            value="16"
+            class="slider"
+            id="sizeSlider"
+          />
+        </div>
 
         <button class="btn" id="btn">Reset</button>
       </div>
