--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="side-box">
         <!-- Slider for grid size -->
         <div>
-          <div id="sizeVal" class="size-value"></div>
+          <div id="sizeVal" class="size-value">16 X 16</div>
           <input
             type="range"
             min="1"
