round color picker exit, now need to add function

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div class="same-line">
       <!-- This box will contain size and color change features -->
       <div class="side-box">
-        <button class="color" id="color">Pick a Color</button>
+        <!-- <button class="color" id="color">Pick a Color</button> -->
+        <input type="color" id="color" value="#00BFFF" />
+
         <button class="rgb" id="rgb">Random Colors</button>
 
         <!-- Slider for grid size -->
