--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Etch-a-Sketch</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="sketch.js" defer></script>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <h1>Etch-a-Sketch</h1>
@@ -16,7 +20,7 @@
       <!-- This box will contain size and color change features -->
       <div class="side-box">
         <!-- <button class="color" id="color">Pick a Color</button> -->
-        <input type="color" id="color" value="#00BFFF" />
+        <input type="color" id="color" value="#228b22" />
 
         <button class="rgb" id="rgb">Random Colors</button>
 
@@ -39,6 +43,12 @@
       <!-- 16x16 grid of square divs -->
 
       <div class="container" id="container"></div>
+    </div>
+    <div class="footer">
+      Copyright © 2022 Jean-Marc
+      <a href="https://github.com/jaym9000/Etch-a-Sketch" target="_blank"
+        ><i class="fa fa-github"></i
+      ></a>
     </div>
   </body>
 </html>
